test/errors/type/collections/set/__lt.yasl
echo mt.lookup(collections.set(), .__lt)(collections.set(), true)
